; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_iommu.c_iommu_free_coherent.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/arch/powerpc/kernel/extr_iommu.c_iommu_free_coherent.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.iommu_table = type { i32 }

@IOMMU_PAGE_SHIFT = common dso_local global i64 0, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @iommu_free_coherent(%struct.iommu_table* %0, i64 %1, i8* %2, i32 %3) #0 {
  %5 = alloca %struct.iommu_table*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  %8 = alloca i32, align 4
  %9 = alloca i32, align 4
  store %struct.iommu_table* %0, %struct.iommu_table** %5, align 8
  store i64 %1, i64* %6, align 8
  store i8* %2, i8** %7, align 8
  store i32 %3, i32* %8, align 4
  %10 = load %struct.iommu_table*, %struct.iommu_table** %5, align 8
  %11 = icmp ne %struct.iommu_table* %10, null
  br i1 %11, label %12, label %30

12:                                               ; preds = %4
  %13 = load i64, i64* %6, align 8
  %14 = call i64 @PAGE_ALIGN(i64 %13)
  store i64 %14, i64* %6, align 8
  %15 = load i64, i64* %6, align 8
  %16 = load i64, i64* @IOMMU_PAGE_SHIFT, align 8
  %17 = lshr i64 %15, %16
  %18 = trunc i64 %17 to i32
  store i32 %18, i32* %9, align 4
  %19 = load %struct.iommu_table*, %struct.iommu_table** %5, align 8
  %20 = load i32, i32* %8, align 4
  %21 = load i32, i32* %9, align 4
  %22 = call i32 @iommu_free(%struct.iommu_table* %19, i32 %20, i32 %21)
  %23 = load i64, i64* %6, align 8
  %24 = call i64 @PAGE_ALIGN(i64 %23)
  store i64 %24, i64* %6, align 8
  %25 = load i8*, i8** %7, align 8
  %26 = ptrtoint i8* %25 to i64
  %27 = load i64, i64* %6, align 8
  %28 = call i32 @get_order(i64 %27)
  %29 = call i32 @free_pages(i64 %26, i32 %28)
  br label %30

30:                                               ; preds = %12, %4
  ret void
}

declare dso_local i64 @PAGE_ALIGN(i64) #1

declare dso_local i32 @iommu_free(%struct.iommu_table*, i32, i32) #1

declare dso_local i32 @free_pages(i64, i32) #1

declare dso_local i32 @get_order(i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
